Fix illustration alignment

--- a/src/components/RegistrationForm/RegistrationForm.module.scss
+++ b/src/components/RegistrationForm/RegistrationForm.module.scss
@@ -1,6 +1,6 @@
 .registerPage {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   justify-content: center;
   align-items: center;
   gap: 2rem;
